--- a/tyohyvinvointikysely_app/public/manifest.json
+++ b/tyohyvinvointikysely_app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "KyselyApp",
-  "name": "Työterveys hyvinvointikysely",
+  "short_name": "Työkysely",
+  "name": "Työhyvinvointikysely",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
