--- a/surveyapp/package.json
+++ b/surveyapp/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "tyohyvinvointikysely_app",
+  "name": "surveyapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-recaptcha": "^2.1.0",
-    "react-invisible-recaptcha": "^0.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
@@ -37,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/react": "^11.2.6"
   }
 }
