--- a/surveyapp/package.json
+++ b/surveyapp/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://oskarle.github.io/Ohjelmisto-Tuotanto-ja-Mallintaminen-Ryhm-1/",
   "name": "surveyapp",
   "version": "0.1.0",
   "private": true,
@@ -6,6 +7,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.5",
+    "gh-pages": "^3.1.0",
     "npm-gui": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,6 +17,8 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
