--- a/surveyapp/package.json
+++ b/surveyapp/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/user-event": "^13.1.4",
+    "npm-gui": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -14,6 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "gui": "npx npm-gui",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
