--- a/surveyapp/package.json
+++ b/surveyapp/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.4",
+    "gh-pages": "^3.1.0",
     "npm-gui": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
